--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Stacey S.</title>
   </head>
   <body>
-    Hello MDC
+    <h1>Hi, it's Stacey!</h1>
   </body>
 </html>
